--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kdegraphics (4:1.1.1-19990624-1) unstable; urgency=low
+
+  * New upstream CVS version (pull)
+  * Fixed minor rules script issues
+
+ -- Ivan E. Moore II <rkrusty@debian.org>  Thu, 24 Jun 1999 05:30:56 -0400
+
 kdegraphics (4:1.1.1-19990612-2) unstable; urgency=low
 
   * Fixed kderules script so "extra license" error goes away
