--- a/po/ja/kghostview.po
+++ b/po/ja/kghostview.po
@@ -1,9 +1,7 @@
 # KTranslator Generated File
 
-# KTranslator Generated File
-
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 1999 Free Software Foundation, Inc.
+# Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
@@ -11,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 1999-04-23 02:23+0200\n"
-"PO-Revision-Date: Thu May 6 1999 03:02:52+0200\n"
+"PO-Revision-Date: Wed Jul 7 1999 14:31:12+0200\n"
 "Last-Translator: Kimiyasu Tomiyama <tomy@truga.com>\n"
 "Language-Team: Japanese <kde-jp@albert.nikkeibp.co.jp>\n"
 "MIME-Version: 1.0\n"
@@ -125,11 +123,11 @@ msgstr "バッキング"
 
 #: interpreter.cpp:214
 msgid "&Pixmap"
-msgstr "&ピックスマップ(&P)"
+msgstr "ピックスマップ(&P)"
 
 #: interpreter.cpp:224
 msgid "&Backing store"
-msgstr "&バッキング ストア(&B)"
+msgstr "バッキング ストア(&B)"
 
 #: interpreter.cpp:314
 msgid "gs"
@@ -185,7 +183,7 @@ msgstr "ページ"
 
 #: print.cpp:176
 msgid "&All"
-msgstr "&全て(&A)"
+msgstr "全て(&A)"
 
 #: print.cpp:185
 msgid "&Current"
@@ -197,7 +195,7 @@ msgstr "印のついた(&M)"
 
 #: print.cpp:202
 msgid "&Range"
-msgstr "&範囲(&R)"
+msgstr "範囲(&R)"
 
 #: print.cpp:216
 msgid "to"
@@ -205,7 +203,7 @@ msgstr "〜"
 
 #: print.cpp:229
 msgid "Print document in re&verse order"
-msgstr "文書を逆順で印刷(&v)"
+msgstr "文書を逆順で印刷(&V)"
 
 #: print.cpp:246
 msgid "&Setup ..."
@@ -224,15 +222,14 @@ msgid ""
 "range for this part of the document.\n"
 "Check the status bar for this information.\n"
 msgstr ""
-"入力されたページを印刷することはできません\n"
+"入力された印刷ページ範囲は正しくありません\n"
 "\n"
-"印刷するページの範囲は\n"
-"文書に割り当てられたページの範囲で指定して下さい\n"
-"ステータスバーの情報をチェックして下さい\n"
+"その文書のページ数に収まるようにページ範囲を指定して下さい\n"
+"ステータスバーでページ数などを確認して下さい\n"
 
 #: goto.cpp:54
 msgid "&Section"
-msgstr "&章(&S)"
+msgstr "章(&S)"
 
 #: goto.cpp:70
 msgid "&Page"
@@ -285,7 +282,8 @@ msgid ""
 " [filename] [siwtches]\n"
 "\n"
 msgstr ""
-" [ファイル名] [引数]\n"
+" [filename] [siwtches]\n"
+"\n"
 ""
 
 #: main.cpp:28
@@ -293,9 +291,8 @@ msgid ""
 "See KDE and Qt documentation for\n"
 "command line options.\n"
 msgstr ""
-"コマンドラインオプションに関する\n"
-"KDE と Qt の文書を参照して下さい\n"
-""
+"コマンドラインオプションは\n"
+"KDE や Qt のドキュメントを参照して下さい\n"
 
 #: main.cpp:30
 msgid "Error on command line"
@@ -586,8 +583,8 @@ msgid ""
 msgstr ""
 "インターネットジョブの終了を\n"
 "待っています\n"
-"終了するまで待って下さい\n"
-"もしくは実行中のものを停止してください"
+"終了するまで待つか\n"
+"または実行中のジョブを停止してください"
 
 #: kghostview.cpp:792
 msgid "Could not start or find KFM."
@@ -640,15 +637,15 @@ msgid ""
 "nothing could be printed to a file.\n"
 msgstr ""
 "ファイル名が与えられていないので\n"
-"ファイルに印刷することができません\n"
+"印刷できません\n"
 
 #: kghostview.cpp:1702
 msgid ""
 "Set Environment variable (to PRINTER or LPDEST for instance)for Printer name "
 "to be taken into account."
 msgstr ""
-"プリンタ名を取得するための"
-"環境変数(例:PRINTER や LPDEST)をセットして下さい"
+"プリンター名に環境変数(例: PRINTER や LPDEST)"
+"をセットして下さい"
 
 #: kghostview.cpp:1723
 #, c-format
@@ -660,7 +657,7 @@ msgid ""
 "Printing failed because the list of\n"
 "pages to be printed was empty.\n"
 msgstr ""
-"印刷するページリストがないため\n"
+"印刷するページリストが空なので\n"
 "印刷に失敗しました\n"
 
 #: kghostview.cpp:2309 kghostview.cpp:2321 kghostview.cpp:2586
