--- a/po/ja/ksnapshot.po
+++ b/po/ja/ksnapshot.po
@@ -1,12 +1,5 @@
 # KTranslator Generated File
 
-# KTranslator Generated File
-
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -21,12 +14,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 1999-03-05 01:49+0100\n"
-"PO-Revision-Date: Thu Apr 22 1999 17:51:44+0200\n"
+"PO-Revision-Date: Wed Jul 7 1999 15:28:06+0200\n"
 "Last-Translator: Kimiyasu Tomiyama <tomy@truga.com>\n"
 "Language-Team: Japanese <kde-jp@albert.nikkeibp.co.jp>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
+"Content-Type: text/plain; charset=euc-jp\n"
+"Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KTranslator v 0.4.0"
 
 #: ksnapshot.cpp:41
@@ -50,15 +43,15 @@ msgstr ""
 "KSnapshotの著作権はRichard Moore (rich@kde.org)\n"
 "にあり、LGPLの下で配布されています\n"
 "\n"
-"ヴァージョン: %s"
+"バージョン: %s"
 
 #: ksnapshot.cpp:130
 msgid "Filename:"
-msgstr "ファイル名"
+msgstr "ファイル名:"
 
 #: ksnapshot.cpp:162
 msgid "Delay:"
-msgstr "遅延時間"
+msgstr "遅延時間:"
 
 #: ksnapshot.cpp:171
 msgid "seconds."
@@ -82,7 +75,7 @@ msgstr "グラブ"
 
 #: ksnapshot.cpp:455
 msgid "Error: Unable to save image"
-msgstr "エラー: 画像をセーブできません"
+msgstr "エラー: 画像を保存できません"
 
 #: ksnapshot.cpp:456
 msgid "Dismiss"
@@ -95,8 +88,8 @@ msgid ""
 "%s."
 msgstr ""
 "KSnapshot は %s\n"
-"に画像をセーブできません"
+"に画像を保存できません"
 
 #: ksnapshot.cpp:470
 msgid "KSnapshot preview"
-msgstr "KSnapshotプレビュー"
+msgstr ""
