--- a/po/hr/kview.po
+++ b/po/hr/kview.po
@@ -13,7 +13,7 @@ msgstr ""
 
 #: viewer.cpp:95
 msgid "no image loaded"
-msgstr ""
+msgstr "ni jedna slika nije uèitana"
 
 #: viewer.cpp:103 viewer.cpp:599
 msgid "Ready"
@@ -24,9 +24,9 @@ msgid "Net saving not yet implemented"
 msgstr "Mre¾no spremanje jo¹ nije podr¾ano"
 
 #: viewer.cpp:189
-#, fuzzy, c-format
+#, c-format
 msgid "%s: written"
-msgstr "zapisano"
+msgstr "%s: zapisano"
 
 #: viewer.cpp:227
 msgid "Enter Zoom factor (100 = 1x):"
@@ -49,7 +49,6 @@ msgid "About KView"
 msgstr "O KView"
 
 #: viewer.cpp:310 viewer.cpp:412
-#, fuzzy
 msgid "&List..."
 msgstr "&Lista.."
 
@@ -86,7 +85,6 @@ msgid "&Images"
 msgstr "&Slike"
 
 #: viewer.cpp:352
-#, fuzzy
 msgid "&Save As..."
 msgstr "&Spremi pod drugim imenom.."
 
@@ -111,7 +109,6 @@ msgid "&Preferences..."
 msgstr ""
 
 #: viewer.cpp:375
-#, fuzzy
 msgid "&Zoom..."
 msgstr "&Uveæaj/Umanji"
 
@@ -134,9 +131,8 @@ msgid "&Half size"
 msgstr "Polovica velièine"
 
 #: viewer.cpp:384
-#, fuzzy
 msgid "&Max size"
-msgstr "&Max"
+msgstr "&Max velièina"
 
 #: viewer.cpp:386
 msgid "Max/&aspect"
@@ -173,14 +169,13 @@ msgstr ""
 
 #: viewer.cpp:426
 msgid "&How do I..."
-msgstr ""
+msgstr "&Kako da..."
 
 #: viewer.cpp:427
 msgid "&What is a..."
-msgstr ""
+msgstr "&©to je..."
 
 #: viewer.cpp:429
-#, fuzzy
 msgid "&About KView..."
 msgstr "&O KView.."
 
@@ -193,14 +188,12 @@ msgid "Couldn't get temporary transfer name."
 msgstr "Ne mogu dobiti privremeno ime za prijenos"
 
 #: viewer.cpp:532
-#, fuzzy
 msgid "Transfer error: "
-msgstr "&Transformiraj"
+msgstr "Gre¹ka kod prijenosa: "
 
 #: viewer.cpp:618
-#, fuzzy
 msgid "Loading..."
-msgstr "Uèitavam.."
+msgstr "Uèitavam..."
 
 #: viewer.cpp:632
 #, c-format
@@ -224,9 +217,8 @@ msgid "Changing brightness..."
 msgstr "Mijenjam svjetlinu..."
 
 #: colour.cpp:58
-#, fuzzy
 msgid "Intensity:Brightness"
-msgstr "Intenzite:Svjetlije"
+msgstr "Intenzitet:Svjetlina"
 
 #: colour.cpp:100
 msgid "Converting to Greyscale..."
@@ -257,12 +249,10 @@ msgid "Gamma-correcting..."
 msgstr "Gamma korekcija..."
 
 #: colour.cpp:296
-#, fuzzy
 msgid "Intensity:Gamma Correct..."
 msgstr "Intenzitet:gamma korekcija..."
 
 #: colour.cpp:310
-#, fuzzy
 msgid "External.."
 msgstr "Vanjsko.."
 
@@ -300,29 +290,27 @@ msgstr ""
 
 #: prefdlg.cpp:36
 msgid "&Apply"
-msgstr ""
+msgstr "&Primjeni"
 
 #: prefdlg.cpp:51
 msgid "On Load"
-msgstr ""
+msgstr "Prilikom uèitavanja"
 
 #: prefdlg.cpp:58
-#, fuzzy
 msgid "Resize Window"
-msgstr "Zatvori prozor"
+msgstr "Promijeni velièinu prozora"
 
 #: prefdlg.cpp:61
 msgid "Resize Image"
-msgstr ""
+msgstr "Promijeni velièinu slike"
 
 #: prefdlg.cpp:64
 msgid "No Resize"
 msgstr ""
 
 #: prefdlg.cpp:69
-#, fuzzy
 msgid "Slideshow"
-msgstr "Uklj./Isklj. &Slideshow"
+msgstr "Slideshow"
 
 #: prefdlg.cpp:72
 msgid "Loop"
@@ -334,28 +322,4 @@ msgstr ""
 
 #: prefdlg.cpp:84
 msgid "&Keys"
-msgstr ""
-
-#~ msgid "&Tile"
-#~ msgstr "Pop&loèaj"
-
-#~ msgid "&Max"
-#~ msgstr "&Max"
-
-#~ msgid "Interval.."
-#~ msgstr "Interval.."
-
-#~ msgid "Time between slides (sec):"
-#~ msgstr "Vrijeme izmeðu slajdova (sek):"
-
-#~ msgid "Fi&lter"
-#~ msgstr "Fi&lter"
-
-#~ msgid "&Open.."
-#~ msgstr "&Otvori.."
-
-#~ msgid "&Zoom in 50%"
-#~ msgstr "&Uveæaj 50%"
-
-#~ msgid "Zoo&m out 50%"
-#~ msgstr "Uma&nji 50%"
+msgstr "&Tipke"
