--- a/po/hu/kghostview.po
+++ b/po/hu/kghostview.po
@@ -1,54 +1,56 @@
+# KTranslator Generated File
+
 # Hungarian messages for KGhostview
 # Copyright (C) 1998 Free Software Foundation, Inc.
-# Sz‰kely Krisztißn <szekelyk@edasz.hu>, 1998.
+# Székely Krisztián <szekelyk@edasz.hu>, 1998.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: kghostscript VERSION\n"
 "POT-Creation-Date: 1999-04-23 02:23+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Sz‰kely Krisztißn <szekelyk@edasz.hu>\n"
+"Last-Translator: Székely Krisztián <szekelyk@edasz.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
 #: marklist.cpp:38
-#, fuzzy
+#
 msgid "Mark current page"
-msgstr "Oldal kijel÷l‰se"
+msgstr "Oldal kijelölése"
 
 #: marklist.cpp:39
-#, fuzzy
+#
 msgid "Mark all pages"
-msgstr "Oldal kijel÷l‰se"
+msgstr "Minden oldal kijelölése"
 
 #: marklist.cpp:40
-#, fuzzy
+#
 msgid "Mark even pages"
-msgstr "Oldal kijel÷l‰se"
+msgstr "Páros oldalak kijelölése"
 
 #: marklist.cpp:41
-#, fuzzy
+#
 msgid "Mark odd pages"
-msgstr "Oldal kijel÷l‰se"
+msgstr "Páratlan oldalak kijelölése"
 
 #: marklist.cpp:42
 msgid "Toggle page marks"
-msgstr ""
+msgstr "Oldal kijelölés váltás"
 
 #: marklist.cpp:43
 msgid "Remove page marks"
-msgstr ""
+msgstr "Oldal kijelölések törlése"
 
 #: marklist.cpp:367
-#, fuzzy
+#
 msgid "Page"
 msgstr "Oldal"
 
 #: copyright.cpp:27
 msgid "Copyright"
-msgstr "Szerzi jog"
+msgstr "Szerzõi jog"
 
 #: copyright.cpp:41 kghostview.cpp:629
 msgid ""
@@ -69,76 +71,75 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Ez egy szabad program; tovßbbadhatod ‰s/vagy mdosthatod\n"
-"a Free Software Foundation ßltal kiadott GNU General Public License\n"
-"2-es vagy bßrmely k‰sbbi (vßlaszthat) verziban foglaltak szerint.\n"
+"Ez egy szabad program; továbbadhatod és/vagy módosíthatod\n"
+"a Free Software Foundation által kiadott GNU General Public License\n"
+"2-es vagy bármely késõbbi (választható) verzióban foglaltak szerint.\n"
 "\n"
 "\n"
-"E program annak remeny‰ben k‰sz’l, hogy hasznos lesz de\n"
-"MINDEN GARANCIA NĞLK›L;  A r‰szleteket lßsd a GNU General Public "
-"License-ben.\n"
+"E program annak remenyében készül, hogy hasznos lesz de\n"
+"MINDEN GARANCIA NÉLKÜL;  A részleteket lásd a GNU General Public License-ben.\n"
 "\n"
 "\n"
-"A programmal kellett kapnod egy p‰ldßnyt a GNU General Public License-\n"
-"-bl; ha nem, akkor rj a Free Software Foundation-nak, 675 Mass Ave\n"
+"A programmal kellett kapnod egy példányt a GNU General Public License-\n"
+"-bõl; ha nem, akkor írj a Free Software Foundation-nak, 675 Mass Ave\n"
 "Cambridge, MA 02139, USA."
 
 #: interpreter.cpp:42
 msgid "General"
-msgstr "Âltalßnos"
+msgstr "Általános"
 
 #: interpreter.cpp:79
-#, fuzzy
+#
 msgid "&Interpreter name"
-msgstr "Ğrtelmez neve"
+msgstr "&Értelmezõ neve"
 
 #: interpreter.cpp:87
-#, fuzzy
+#
 msgid "&Antialiasing"
-msgstr "Ğlsimtßs"
+msgstr "É&lsimítás"
 
 #: interpreter.cpp:97
-#, fuzzy
+#
 msgid "Platform &fonts"
-msgstr "Platform fontok"
+msgstr "Platform &betûtípusok"
 
 #: interpreter.cpp:107
-#, fuzzy
+#
 msgid "&Messages"
-msgstr "›zenetek"
+msgstr "Ü&zenetek"
 
 #: interpreter.cpp:130
 msgid "Palette"
 msgstr "Paletta"
 
 #: interpreter.cpp:152
-#, fuzzy
+#
 msgid "Colo&r"
-msgstr "Szn"
+msgstr "Szí&n"
 
 #: interpreter.cpp:161
-#, fuzzy
+#
 msgid "&Grayscale"
-msgstr "Sz’rkeskßla"
+msgstr "Szü&rkeskála"
 
 #: interpreter.cpp:169
-#, fuzzy
+#
 msgid "Monochrom&e"
-msgstr "Monokrom"
+msgstr "&Monokróm"
 
 #: interpreter.cpp:192
 msgid "Backing"
-msgstr "Back-up"
+msgstr "Másolat"
 
 #: interpreter.cpp:214
-#, fuzzy
+#
 msgid "&Pixmap"
-msgstr "Pixelk‰p"
+msgstr "&Pixelkép"
 
 #: interpreter.cpp:224
-#, fuzzy
+#
 msgid "&Backing store"
-msgstr "Back-up tßrolßs"
+msgstr "Másola&t tárolás"
 
 #: interpreter.cpp:314
 msgid "gs"
@@ -146,92 +147,92 @@ msgstr "gs"
 
 #: messages.cpp:29
 msgid "Ghostscript messages"
-msgstr "Ghostscript ’zenetek"
+msgstr "Ghostscript üzenetek"
 
 #: messages.cpp:56
-#, fuzzy
+#
 msgid "&Clear"
-msgstr "T÷r÷l"
+msgstr "&Töröl"
 
 #: messages.cpp:59
 msgid "&Dismiss"
-msgstr ""
+msgstr "&Elvet"
 
 #: info.cpp:45
-#, fuzzy
+#
 msgid "File name :"
-msgstr "Fßjl :"
+msgstr "Fájl neve:"
 
 #: info.cpp:53
 msgid "Document title :"
-msgstr ""
+msgstr "Dokumentum címe:"
 
 #: info.cpp:61
 msgid "Publication date :"
-msgstr ""
+msgstr "Publikáció dátuma:"
 
 #: print.cpp:35
-#, fuzzy
+#
 msgid "Printer setup"
-msgstr "Nyomtat neve"
+msgstr "Nyomtató beállítás"
 
 #: print.cpp:61
-#, fuzzy
+#
 msgid "&Printer name"
-msgstr "Nyomtat neve"
+msgstr "&Nyomtató neve"
 
 #: print.cpp:73
 msgid "&Spooler command"
-msgstr ""
+msgstr "&Spooler parancs"
 
 #: print.cpp:85
 msgid "&Environment variable"
-msgstr ""
+msgstr "Körny&ezeti változó"
 
 #: print.cpp:145
-#, fuzzy
+#
 msgid "Print to file"
-msgstr "Nyomtatßsi hiba : lpr"
+msgstr "Nyomtatás fájlba"
 
 #: print.cpp:150
 msgid "Pages"
 msgstr "Oldalak"
 
 #: print.cpp:176
-#, fuzzy
+#
 msgid "&All"
-msgstr "Mind"
+msgstr "&Mind"
 
 #: print.cpp:185
 msgid "&Current"
-msgstr ""
+msgstr "A&ktuális"
 
 #: print.cpp:193
-#, fuzzy
+#
 msgid "&Marked"
-msgstr "Kijel÷ltek"
+msgstr "K&ijelöltek"
 
 #: print.cpp:202
 msgid "&Range"
-msgstr ""
+msgstr "Ta&rtomány"
 
 #: print.cpp:216
 msgid "to"
-msgstr ""
+msgstr "eddig"
 
 #: print.cpp:229
-#, fuzzy
+#
 msgid "Print document in re&verse order"
-msgstr "Dokumentum nyomtatßs"
+msgstr "Nyomtatás &visszafelé"
 
 #: print.cpp:246
-#, fuzzy
+#
 msgid "&Setup ..."
-msgstr "&Megnyit ..."
+msgstr "Beállítá&s ..."
 
 #: print.cpp:304
 msgid "Range error"
-msgstr ""
+msgstr "Tartomány hiba"
 
 #: print.cpp:305
 msgid ""
@@ -242,146 +243,156 @@ msgid ""
 "range for this part of the document.\n"
 "Check the status bar for this information.\n"
 msgstr ""
+"A megadott nyomtatási tartomány nem értelmezhetõ\n"
+"\n"
+"A tartomány nem eshet kívül a dokumentum\n"
+"oldalainak számán. Az állapotsorban található\n"
+"az erre vonatkozó információ.\n"
 
 #: goto.cpp:54
-#, fuzzy
+#
 msgid "&Section"
-msgstr "Szekci"
+msgstr "&Szekció"
 
 #: goto.cpp:70
-#, fuzzy
+#
 msgid "&Page"
-msgstr "Oldal"
+msgstr "&Oldal"
 
 #: goto.cpp:123 goto.cpp:130 goto.cpp:147 kghostview.cpp:2315
 #: kghostview.cpp:2327 kghostview.cpp:2332 kghostview.cpp:2615
 #, c-format
 msgid "of %d"
-msgstr "%d-bl"
+msgstr "%d-bõl"
 
 #: kghostview.cpp:1269 kghostview.cpp:2406 viewcontrol.cpp:64
 msgid "Portrait"
-msgstr "Âll"
+msgstr "Âlló"
 
 #: kghostview.cpp:1273 kghostview.cpp:2412 viewcontrol.cpp:65
 msgid "Landscape"
-msgstr "Fekv (Landscape)"
+msgstr "Fekvõ (Landscape)"
 
 #: kghostview.cpp:1277 kghostview.cpp:2408 viewcontrol.cpp:66
 msgid "Upside down"
-msgstr "Fentrl lefel‰"
+msgstr "Fentrõl lefelé"
 
 #: kghostview.cpp:1281 kghostview.cpp:2410 viewcontrol.cpp:67
 msgid "Seascape"
-msgstr "Fekv (Seascape)"
+msgstr "Fekvõ (Seascape)"
 
 #: viewcontrol.cpp:75
-#, fuzzy
+#
 msgid "magnification"
-msgstr "Nagytßs"
+msgstr "nagyítás"
 
 #: viewcontrol.cpp:85
-#, fuzzy
+#
 msgid "&Media"
-msgstr "M‰dia"
+msgstr "M&édia"
 
 #: viewcontrol.cpp:93
-#, fuzzy
+#
 msgid "&Orientation"
-msgstr "Irßnyultsßg"
+msgstr "Irány&ultság"
 
 #: viewcontrol.cpp:117
 msgid "&Apply"
-msgstr ""
+msgstr "&Alkalmaz"
 
 #: main.cpp:25
-#, fuzzy
+#
 msgid "Usage: "
-msgstr "Hasznßlat: %s\n"
+msgstr "Használat: "
 
 #: main.cpp:27
-#, fuzzy
+#
 msgid ""
 " [filename] [siwtches]\n"
 "\n"
-msgstr "[fßjln‰v]\n"
+msgstr ""
+" [fájlnév] [kapcsolók]\n"
+""
 
 #: main.cpp:28
-#, fuzzy
+#
 msgid ""
 "See KDE and Qt documentation for\n"
 "command line options.\n"
-msgstr "A parancssori opcikat lßsd a Qt dokumentßciban\n"
+msgstr ""
+"A parancssori opciókat lásd a KDE és Qt\n"
+"dokumentációkban\n"
+""
 
 #: main.cpp:30
 msgid "Error on command line"
-msgstr ""
+msgstr "Parancssor hiba"
 
 #: kghostview.cpp:206
-#, fuzzy
+#
 msgid "Document information"
-msgstr "Informßci"
+msgstr "Dokumentum információ"
 
 #: kghostview.cpp:220 kghostview.cpp:371 kghostview.cpp:460
-#, fuzzy
+#
 msgid "Page Setup"
-msgstr "Nyomtat neve"
+msgstr "Oldalbeállítás"
 
 #: kghostview.cpp:372 kghostview.cpp:465
 msgid "Go To Page"
-msgstr "Menj a lapra"
+msgstr "Ugrás lapra"
 
 #: kghostview.cpp:373 kghostview.cpp:458
 msgid "Zoom In"
-msgstr "Nagyt"
+msgstr "Nagyít"
 
 #: kghostview.cpp:374 kghostview.cpp:459
 msgid "Zoom Out"
-msgstr "Kicsinyt"
+msgstr "Kicsinyít"
 
 #: kghostview.cpp:375 kghostview.cpp:463
 msgid "Next Page"
-msgstr "K÷vetkez oldal"
+msgstr "Következõ oldal"
 
 #: kghostview.cpp:376 kghostview.cpp:464
 msgid "Prev Page"
-msgstr "Elz oldal"
+msgstr "Elõzõ oldal"
 
 #: kghostview.cpp:377
 msgid "Scroll Up"
-msgstr "G÷rget‰s fel"
+msgstr "Görgetés fel"
 
 #: kghostview.cpp:378
 msgid "Scroll Down"
-msgstr "G÷rget‰s le"
+msgstr "Görgetés le"
 
 #: kghostview.cpp:379
 msgid "Scroll Left"
-msgstr "G÷rget‰s balra"
+msgstr "Görgetés balra"
 
 #: kghostview.cpp:380
 msgid "Scroll Right"
-msgstr "G÷rget‰s jobbra"
+msgstr "Görgetés jobbra"
 
 #: kghostview.cpp:381 kghostview.cpp:461
 msgid "Redisplay"
-msgstr "õjrarajzol"
+msgstr "Újrarajzol"
 
 #: kghostview.cpp:424 kghostview.cpp:426
 msgid "Not known"
-msgstr ""
+msgstr "Ismeretlen"
 
 #: kghostview.cpp:437
 msgid "Configure interpreter"
-msgstr "Ğrtelmez beßlltßsa"
+msgstr "Értelmezõ beállítása"
 
 #: kghostview.cpp:455
 msgid "New"
-msgstr "õj"
+msgstr "Új"
 
 #: kghostview.cpp:509
 msgid "&New"
-msgstr "&õj"
+msgstr "&Új"
 
 #: kghostview.cpp:511
 msgid "&Open ..."
@@ -389,12 +400,12 @@ msgstr "&Megnyit ..."
 
 #: kghostview.cpp:512
 msgid "Open &recent"
-msgstr ""
+msgstr "Le&gutóbbi megnyitása"
 
 #: kghostview.cpp:520
-#, fuzzy
+#
 msgid "Page Set&up ..."
-msgstr "&Megnyit ..."
+msgstr "&Oldalbeállítás..."
 
 #: kghostview.cpp:522
 msgid "&Print ..."
@@ -402,120 +413,120 @@ msgstr "&Nyomtat ..."
 
 #: kghostview.cpp:530
 msgid "Zoom &in"
-msgstr "Nagyt"
+msgstr "Nagyít"
 
 #: kghostview.cpp:532
 msgid "Zoom &out"
-msgstr "Kicsinyt"
+msgstr "Kicsinyít"
 
 #: kghostview.cpp:534
-#, fuzzy
+#
 msgid "&Zoom ..."
-msgstr "&Informßci ..."
+msgstr "&Nagyít/kicsinyít..."
 
 #: kghostview.cpp:539
 msgid "&Info ..."
-msgstr "&Informßci ..."
+msgstr "&Információ ..."
 
 #: kghostview.cpp:544
 msgid "&Previous Page"
-msgstr "&Elz oldal"
+msgstr "&Elõzõ oldal"
 
 #: kghostview.cpp:546
 msgid "&Next page"
-msgstr "&K÷vetkez oldal"
+msgstr "&Következõ oldal"
 
 #: kghostview.cpp:548
 msgid "&Go to page ..."
-msgstr "&Menj az adott oldalra ..."
+msgstr "U&grás oldalra ..."
 
 #: kghostview.cpp:551
 msgid "Go to &start"
-msgstr "E&lej‰re"
+msgstr "E&lejére"
 
 #: kghostview.cpp:553
 msgid "Go to &end"
-msgstr "&V‰g‰re"
+msgstr "&Végére"
 
 #: kghostview.cpp:555
 msgid "&Read down"
-msgstr "&Teljes beolvasßs"
+msgstr "&Teljes beolvasás"
 
 #: kghostview.cpp:560
-#, fuzzy
+#
 msgid "Mark &current page"
-msgstr "Oldal kijel÷l‰se"
+msgstr "A&ktuális oldal kijelölése"
 
 #: kghostview.cpp:563
-#, fuzzy
+#
 msgid "Mark &all pages"
-msgstr "Oldal kijel÷l‰se"
+msgstr "&Minden oldal kijelölése"
 
 #: kghostview.cpp:565
-#, fuzzy
+#
 msgid "Mark &even pages"
-msgstr "Oldal kijel÷l‰se"
+msgstr "&Páros oldalak kijelölése"
 
 #: kghostview.cpp:567
-#, fuzzy
+#
 msgid "Mark &odd pages"
-msgstr "Oldal kijel÷l‰se"
+msgstr "Pá&ratlan oldalak kijelölése"
 
 #: kghostview.cpp:570
 msgid "&Toggle page marks"
-msgstr ""
+msgstr "Kijelölés &váltogatása"
 
 #: kghostview.cpp:573
 msgid "&Remove page marks"
-msgstr ""
+msgstr "Kijelölések tö&rlése"
 
 #: kghostview.cpp:584
 msgid "Show &tool bar"
-msgstr "Eszk÷zsor"
+msgstr "Eszközsor megjelení&tése"
 
 #: kghostview.cpp:585
-#, fuzzy
+#
 msgid "Show st&atus bar"
-msgstr "Âllapotsor"
+msgstr "Áll&apotsor megjelenítése"
 
 #: kghostview.cpp:586
 msgid "Show &page list"
-msgstr ""
+msgstr "Ol&dal lista megjelenítése"
 
 #: kghostview.cpp:588
-#, fuzzy
+#
 msgid "Configure &interpreter ..."
-msgstr "&Ğrtelmez beßlltßsa ..."
+msgstr "&Értelmezõ beállítása ..."
 
 #: kghostview.cpp:589
 msgid "Configure &key bindings ..."
-msgstr "Billenty“ hozzßrendel‰sek ..."
+msgstr "Billentyû hozzárendelések ..."
 
 #: kghostview.cpp:591
-#, fuzzy
+#
 msgid "&Save options"
-msgstr "&Opcik ment‰se"
+msgstr "Beállítá&sok mentése"
 
 #: kghostview.cpp:598
 msgid "&About this application"
-msgstr "&N‰vjegy"
+msgstr "&Névjegy"
 
 #: kghostview.cpp:600
 msgid "&Help for this application"
-msgstr "&S”g"
+msgstr "&Súgó"
 
 #: kghostview.cpp:602
 msgid "&Copyright"
-msgstr "&Szerzi jog"
+msgstr "S&zerzõi jog"
 
 #: kghostview.cpp:609
 msgid "&Go"
-msgstr "&Menj"
+msgstr "U&grás"
 
 #: kghostview.cpp:610
-#, fuzzy
+#
 msgid "&Pagemarks"
-msgstr "Oldalak"
+msgstr "&Oldal jelek"
 
 #: kghostview.cpp:619
 msgid ""
@@ -530,30 +541,38 @@ msgid ""
 "\n"
 "See http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
 msgstr ""
+" - PostScript dokumentum nézõ a KDE felülethez.\n"
+"\n"
+"Szerzõ: Mark Donohoe <donohoe@kde.org>, Tim Theisen munkája alapján.\n"
+"\n"
+"Ezen kívül tartalmaz még kód részeket Johanes Plass gv programjából\n"
+"mint például a tömörítés és PDF támogatás.\n"
+"\n"
+"Látsd: http://wwwthep.physik.uni-mainz.de/~plass/gv/n"
 
 #: kghostview.cpp:676
 msgid "New window ..."
-msgstr ""
+msgstr "Új ablak ..."
 
 #: kghostview.cpp:679
-#, fuzzy
+#
 msgid "Open file ..."
 msgstr "&Megnyit ..."
 
 #: kghostview.cpp:687
-#, fuzzy
+#
 msgid "Print document ..."
-msgstr "Dokumentum nyomtatßs"
+msgstr "Dokumentum nyomtatás ..."
 
 #: kghostview.cpp:692
-#, fuzzy
+#
 msgid "Zoom in"
-msgstr "Nagyt"
+msgstr "Nagyít"
 
 #: kghostview.cpp:695
-#, fuzzy
+#
 msgid "Zoom out"
-msgstr "Kicsinyt"
+msgstr "Kicsinyít"
 
 #: kghostview.cpp:700
 msgid "Go back"
@@ -561,31 +580,31 @@ msgstr "Vissza"
 
 #: kghostview.cpp:703
 msgid "Go forward"
-msgstr "Elre"
+msgstr "Elõre"
 
 #: kghostview.cpp:706
 msgid "Go to page ..."
-msgstr "Menj az adott oldalra ..."
+msgstr "Ugrás oldalra ..."
 
 #: kghostview.cpp:711
 msgid "Go to start"
-msgstr "Elej‰re"
+msgstr "Elejére"
 
 #: kghostview.cpp:714
 msgid "Go to end"
-msgstr "V‰g‰re"
+msgstr "Végére"
 
 #: kghostview.cpp:717
 msgid "Read down the page"
-msgstr "Az oldal teljes beolvasßsa"
+msgstr "Az oldal teljes beolvasása"
 
 #: kghostview.cpp:722
 msgid "Toggle this page mark"
-msgstr ""
+msgstr "Oldal jelzõ váltogatása"
 
 #: kghostview.cpp:744
 msgid "Sc.100 of 100  P.100 of 100"
-msgstr "100 Sc. a 100-bl 100 P. a 100-bl"
+msgstr "100 Sc. a 100-ból 100 P. a 100-ból"
 
 #: kghostview.cpp:745
 #, c-format
@@ -594,7 +613,7 @@ msgstr "100 %"
 
 #: kghostview.cpp:746
 msgid "Upside Down"
-msgstr "Fentrl lefel‰"
+msgstr "Fentrõl lefelé"
 
 #: kghostview.cpp:771
 msgid "Malformed URL."
@@ -607,47 +626,47 @@ msgid ""
 "Please wait until has finished.\n"
 "Alternatively stop the running one."
 msgstr ""
-"Egy internet hozzßf‰r‰s mßr\n"
+"Egy internet hozzáférés már\n"
 "folyamatban van.\n"
-"K‰rem vßrjon amig befejezdik vagy\n"
-"ßlltsa le a hozzßf‰r‰st."
+"Kérem várjon amig befejezõdik vagy\n"
+"állítsa le a hozzáférést."
 
 #: kghostview.cpp:792
 msgid "Could not start or find KFM."
-msgstr "Nem indthat vagy nem talßlhat a KFM."
+msgstr "Nem indíthó el a KFM."
 
 #: kghostview.cpp:1318
-#, fuzzy
+#
 msgid "Go to ..."
-msgstr "Menj az adott oldalra ..."
+msgstr "Ugrás ..."
 
 #: kghostview.cpp:1577
-#, fuzzy
+#
 msgid "Version 0.6"
-msgstr "0.5 Verzi"
+msgstr "0.6 Verzió"
 
 #: kghostview.cpp:1578
 msgid "Sorry, not ready yet"
-msgstr "Sajnos m‰g nincs k‰sz"
+msgstr "Sajnos még nincs kész"
 
 #: kghostview.cpp:1585
 msgid "About kghostview"
-msgstr "N‰vjegy"
+msgstr "Névjegy"
 
 #: kghostview.cpp:1586
-#, fuzzy
+#
 msgid ""
 "Version :\t0.6 alpha\n"
 "Author : Mark Donohoe\n"
 "Mail : donohoe@kde.org"
 msgstr ""
-"Verzi :\t0.5 alpha\n"
-"Szerz : Mark Donohoe\n"
-"Cm : donohoe@kde.org"
+"Verzió :\t0.6 alpha\n"
+"Szerzõ : Mark Donohoe\n"
+"Cím : donohoe@kde.org"
 
 #: kghostview.cpp:1638 kghostview.cpp:1758
 msgid "Error printing"
-msgstr ""
+msgstr "Nyomtatási hiba"
 
 #: kghostview.cpp:1648
 msgid ""
@@ -656,45 +675,55 @@ msgid ""
 "that currently loaded into the viewer.\n"
 "There is no need to print all pages into a new file."
 msgstr ""
+"Minden oldal fájlba nyomtatása lett kiválasztva.\n"
+"Ez egy ugyan olyan dokumenumot eredményez, mint ami\n"
+"most be van töltve a nézõbe.\n"
+"Ez egy fölösleges lépés lenne."
 
 #: kghostview.cpp:1661
 msgid ""
 "No file name was given so\n"
 "nothing could be printed to a file.\n"
 msgstr ""
+"Nincs fájl név megadva, tehát\n"
+"nem is lehet fájlba nyomtatni.\n"
 
 #: kghostview.cpp:1702
 msgid ""
 "Set Environment variable (to PRINTER or LPDEST for instance)for Printer name "
 "to be taken into account."
 msgstr ""
+"A PRINTER vagy LPDEST környezeti változót be kell állítani a nyomtató nevére\n"
+"hogy érvényes legyen."
 
 #: kghostview.cpp:1723
-#, fuzzy, c-format
+#, c-format
 msgid "Print failure : %s"
-msgstr "Nyomtatßsi hiba : lpr"
+msgstr "Nyomtatási hiba: %s"
 
 #: kghostview.cpp:1759
 msgid ""
 "Printing failed because the list of\n"
 "pages to be printed was empty.\n"
 msgstr ""
+"A nyomtatás nem sikerült, mert a\n"
+"nyomtatandó oldalak listája üres volt.\n"
 
 #: kghostview.cpp:2309 kghostview.cpp:2321 kghostview.cpp:2586
 #: kghostview.cpp:2609
 msgid "of 1    "
-msgstr "1-bl  "
+msgstr "1-bõl  "
 
 #: kghostview.cpp:2311 kghostview.cpp:2323 kghostview.cpp:2611
 #, c-format
 msgid "of %d    "
-msgstr "%d-bl  "
+msgstr "%d-bõl  "
 
 #: kghostview.cpp:2313 kghostview.cpp:2325 kghostview.cpp:2613
 #: kghostview.cpp:2620
 #, c-format
 msgid "of %d  "
-msgstr "%d-bl "
+msgstr "%d-bõl "
 
 #: kghostview.cpp:2585
 msgid "Sc.1 "
@@ -702,12 +731,12 @@ msgstr "1. Sc. "
 
 #: kghostview.cpp:2588
 msgid "P.1 "
-msgstr "1. P. "
+msgstr "1. O. "
 
 #: kghostview.cpp:2590 kghostview.cpp:2603
 #, c-format
 msgid "P.%d "
-msgstr "%d P. "
+msgstr "%d O. "
 
 #: kghostview.cpp:2605
 #, c-format
@@ -716,7 +745,7 @@ msgstr "%d Sc. "
 
 #: zoom.cpp:63
 msgid "&Zoom factor"
-msgstr ""
+msgstr "&Nagyítási/kicsinyítési faktor"
 
 #~ msgid "View Control"
 #~ msgstr "N‰zet kontrol"
