--- a/po/hu/kpaint.po
+++ b/po/hu/kpaint.po
@@ -1,3 +1,5 @@
+# KTranslator Generated File
+
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) 1997 Free Software Foundation, Inc.
 # Balazs Nagy <julian7@kva.hu>, 1997.
@@ -15,58 +17,58 @@ msgstr ""
 
 #: areaselect.cpp:20
 msgid "Area Selection"
-msgstr ""
+msgstr "Terület kiválasztás"
 
 #: canvassize.cpp:16
 msgid "Canvas Size"
 msgstr "Keret méret"
 
 #: canvassize.cpp:25
-#, fuzzy
+#
 msgid "Width:"
-msgstr "Szélesség"
+msgstr "Szélesség:"
 
 #: canvassize.cpp:26
-#, fuzzy
+#
 msgid "Height:"
-msgstr "Magasság"
+msgstr "Magasság:"
 
 #: circle.cpp:18 circle.cpp:25 manager.cpp:67
 msgid "Circle"
 msgstr "Kör"
 
 #: depthdialog.cpp:23
-#, fuzzy
+#
 msgid "Image Depth:"
-msgstr "Kép szélesség:"
+msgstr "Kép színmélység:"
 
 #: depthdialog.cpp:30
 msgid "1 (2 Colours)"
-msgstr ""
+msgstr "1 (2 szín)"
 
 #: depthdialog.cpp:31
 msgid "4 (16 Colours)"
-msgstr ""
+msgstr "4 (16 szín)"
 
 #: depthdialog.cpp:32
 msgid "8 (256 Colours)"
-msgstr ""
+msgstr "8 (256 szín)"
 
 #: depthdialog.cpp:33
 msgid "15 (32k Colours)"
-msgstr ""
+msgstr "15 (32e szín)"
 
 #: depthdialog.cpp:34
 msgid "16 (64k Colours)"
-msgstr ""
+msgstr "16 (64e szín)"
 
 #: depthdialog.cpp:35
 msgid "24 (True Colour)"
-msgstr ""
+msgstr "24 (True Colour)"
 
 #: depthdialog.cpp:36
 msgid "32 (True Colour)"
-msgstr ""
+msgstr "32 (True Colour)"
 
 #: ellipse.cpp:16 ellipse.cpp:23 manager.cpp:65
 msgid "Ellipse"
@@ -102,12 +104,13 @@ msgstr "nevtelen.gif"
 
 #: kpaint.cpp:172
 msgid "Unsaved Changes"
-msgstr ""
+msgstr "Elmentetlen Változtatások"
 
 #: kpaint.cpp:173
 msgid ""
 "You have unsaved changes, you will loose them if you close this window now."
 msgstr ""
+"Néhány változtatás nem lett elmentve, ezek elvesznek ha bezárod ezt az ablakot."
 
 #: kpaint.cpp:210
 msgid "New Canvas"
@@ -138,9 +141,9 @@ msgid "New Image..."
 msgstr "Új kép..."
 
 #: kpaint.cpp:432
-#, fuzzy
+#
 msgid "Save Image"
-msgstr "Kép mentése..."
+msgstr "Kép mentése"
 
 #: kpaint.cpp:433
 msgid "Save Image As..."
@@ -192,7 +195,7 @@ msgstr "Információ..."
 
 #: kpaint.cpp:456
 msgid "Resize..."
-msgstr ""
+msgstr "Átméretezés..."
 
 #: kpaint.cpp:457
 msgid "Edit Palette..."
@@ -208,20 +211,20 @@ msgstr "Eszközök tulajdonságai..."
 
 #: kpaint.cpp:482
 msgid "Show Tools Toolbar"
-msgstr ""
+msgstr "Eszközök-eszköztár megjelenítése"
 
 #: kpaint.cpp:483
 msgid "Show Commands Toolbar"
-msgstr ""
+msgstr "Parancsok-eszköztár megjelenítése"
 
 #: kpaint.cpp:484
 msgid "Show Status Bar"
-msgstr ""
+msgstr "Állapotsor megjelenítése"
 
 #: kpaint.cpp:485
-#, fuzzy
+#
 msgid "Save Options"
-msgstr "Beállítások..."
+msgstr "Beállítások mentése"
 
 #: kpaint.cpp:495
 #, c-format
@@ -235,6 +238,13 @@ msgid ""
 "see the online documentation\n"
 "for details."
 msgstr ""
+"KPaint %s verzió\n"
+"\n"
+"(c) %s\n"
+"\n"
+"A KPaint a GNU Public License\n"
+"alatt lett kiadva, látsd az online\n"
+"dukumentációt további információkért."
 
 #: kpaint.cpp:508
 msgid "&Image"
@@ -261,7 +271,7 @@ msgid "KPaint: Unknown Format"
 msgstr "KPaint: ismeretlen formátum"
 
 #: kpaint.cpp:694
-#, fuzzy
+#
 msgid ""
 "Error: Unknown Format\n"
 "KPaint does not understand the format of the specified file\n"
@@ -285,7 +295,7 @@ msgstr "Téglalap"
 
 #: manager.cpp:75
 msgid "Round Angle"
-msgstr ""
+msgstr "Kerekített téglalap"
 
 #: manager.cpp:77 spraycan.cpp:19
 msgid "Spray Can"
@@ -293,11 +303,11 @@ msgstr "Festékszóró"
 
 #: manager.cpp:79
 msgid "Text"
-msgstr ""
+msgstr "Szöveg"
 
 #: manager.cpp:81
 msgid "Area Select"
-msgstr ""
+msgstr "Terület kiválasztás"
 
 #: manager.cpp:88
 msgid "Tool Properties"
@@ -404,9 +414,9 @@ msgid "Set Line Colour..."
 msgstr "Vonalszín beállítása..."
 
 #: roundangle.cpp:19
-#, fuzzy
+#
 msgid "Roundangle"
-msgstr "Téglalap"
+msgstr "Kerekített téglalap"
 
 #, fuzzy
 #~ msgid "KPaint"
