--- a/po/hu/ksnapshot.po
+++ b/po/hu/ksnapshot.po
@@ -1,24 +1,22 @@
 # KTranslator Generated File
+
+# KTranslator Generated File
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Marcell Lengyel <miketkf@yahoo.com>, 1999.
 #
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.2.7\n"
 "POT-Creation-Date: 1999-03-05 01:49+0100\n"
-"PO-Revision-Date: Tue Mar 2 1999 10:39:37+0100\n"
+"PO-Revision-Date: Tue Aug 31 1999 16:05:13+0200\n"
 "Last-Translator: Marcell Lengyel <miketkf@yahoo.com>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"Language-Team: Hungarian <kde-lista@sophia.jpte.hu>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
-"Content-Transfer-Encoding: ENCODING\n"
-"X-Generator: KTranslator v 0.4.0\n"
+"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Transfer-Encoding: 8-bit\n"
+"X-Generator: KTranslator v 0.5.0"
 
 #: ksnapshot.cpp:41
 msgid "snapshot"
