--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdegraphics (4:1.1.2-19990906-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Ivan E. Moore II <rkrusty@debian.org>  Mon, 06 Sep 1999 22:30:56 -0400
+
 kdegraphics (4:1.1.1-19990901-1) unstable; urgency=low
 
   * New upstream CVS version
